--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -384,39 +384,6 @@ blockquote
 					font:
 						family: $mono-font
 						size: n-un(14px, "%")
-					&.e2-marked 
-						.w
-							position: relative
-							white-space: nowrap
-						.l
-							position: absolute
-							top: 0
-							width: 8px
-							z-index: 1004
-							height: 100%
-
-						.r
-							position: absolute
-							top: 0
-							width: 8px
-							z-index: 1004
-							height: 100%
-
-						.l
-							left: -8px
-							background: right center no-repeat
-							background-image: url('../images/hgl-left.png?1299055076')
-					
-						.r
-							right: -8px
-							background: left center no-repeat
-							background-image: url('../images/hgl-right.png?1299055065')
-						.c
-							white-space: nowrap
-							position: relative
-							z-index: 1005
-							background: center center repeat-x
-							background-image: url('../images/hgl-bg.png?1299055092')
 	
 	footer
 		margin: 50px 0
@@ -450,7 +417,39 @@ blockquote
 		.engine-info
 			padding-left: 15px
 			display: inline-block
+.e2-marked 
+	.w
+		position: relative
+		white-space: nowrap
+	.l
+		position: absolute
+		top: 0
+		width: 8px
+		z-index: 1004
+		height: 100%
 
+	.r
+		position: absolute
+		top: 0
+		width: 8px
+		z-index: 1004
+		height: 100%
+
+	.l
+		left: -8px
+		background: right center no-repeat
+		background-image: url('../images/hgl-left.png?1299055076')
+
+	.r
+		right: -8px
+		background: left center no-repeat
+		background-image: url('../images/hgl-right.png?1299055065')
+	.c
+		white-space: nowrap
+		position: relative
+		z-index: 1005
+		background: center center repeat-x
+		background-image: url('../images/hgl-bg.png?1299055092')
 .button
 	display: inline
 	display: inline-block
